package JUZGADO;

import java.io.Serializable;

public class Agravante extends Circunstancia implements Serializable {

    public Agravante(int valor, String num_exp) {
        super(valor, num_exp);
    }
    
}
